app/lib/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// FFI bindings for the Lumen Node App, allowing Flutter to interface with the C++ shader graph library.
class LumenBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LumenBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LumenBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<ffi.Void> createGraph() {
    return _createGraph();
  }

  late final _createGraphPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function()>>(
        'createGraph',
      );
  late final _createGraph = _createGraphPtr
      .asFunction<ffi.Pointer<ffi.Void> Function()>();

  void destroyGraph(ffi.Pointer<ffi.Void> graphPtr) {
    return _destroyGraph(graphPtr);
  }

  late final _destroyGraphPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'destroyGraph',
      );
  late final _destroyGraph = _destroyGraphPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void addColorNode(
    ffi.Pointer<ffi.Void> graphPtr,
    ffi.Pointer<ffi.Char> nodeId,
  ) {
    return _addColorNode(graphPtr, nodeId);
  }

  late final _addColorNodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('addColorNode');
  late final _addColorNode = _addColorNodePtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  void addMultiplyNode(
    ffi.Pointer<ffi.Void> graphPtr,
    ffi.Pointer<ffi.Char> nodeId,
  ) {
    return _addMultiplyNode(graphPtr, nodeId);
  }

  late final _addMultiplyNodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('addMultiplyNode');
  late final _addMultiplyNode = _addMultiplyNodePtr
      .asFunction<
        void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
      >();

  void setNodeParameter(
    ffi.Pointer<ffi.Void> graphPtr,
    ffi.Pointer<ffi.Char> nodeId,
    ffi.Pointer<ffi.Char> paramName,
    double value,
  ) {
    return _setNodeParameter(graphPtr, nodeId, paramName, value);
  }

  late final _setNodeParameterPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Float,
          )
        >
      >('setNodeParameter');
  late final _setNodeParameter = _setNodeParameterPtr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          double,
        )
      >();

  void connectNodes(
    ffi.Pointer<ffi.Void> graphPtr,
    ffi.Pointer<ffi.Char> fromNode,
    ffi.Pointer<ffi.Char> fromPin,
    ffi.Pointer<ffi.Char> toNode,
    ffi.Pointer<ffi.Char> toPin,
  ) {
    return _connectNodes(graphPtr, fromNode, fromPin, toNode, toPin);
  }

  late final _connectNodesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('connectNodes');
  late final _connectNodes = _connectNodesPtr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void disconnectNode(
    ffi.Pointer<ffi.Void> graphPtr,
    ffi.Pointer<ffi.Char> targetNode,
    ffi.Pointer<ffi.Char> targetPin,
  ) {
    return _disconnectNode(graphPtr, targetNode, targetPin);
  }

  late final _disconnectNodePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('disconnectNode');
  late final _disconnectNode = _disconnectNodePtr
      .asFunction<
        void Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> compile(ffi.Pointer<ffi.Void> graphPtr) {
    return _compile(graphPtr);
  }

  late final _compilePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)
        >
      >('compile');
  late final _compile = _compilePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();
}
